upload graded lab

--- a/monte-carlo/latex/graded_lab1/main.tex
+++ b/monte-carlo/latex/graded_lab1/main.tex
@@ -1,17 +1,19 @@
-\documentclass[a4paper, 12pt]{article}
+\documentclass[twocolumn, 10pt]{article}
 \input{../../../general-preamble.tex}
 \input{../local-preamble.tex}
 
 \begin{document}
-    \title{Monte Carlo Methods Graded Lab 1}
-    \author{Paulina Ptukha, Xiaopeng Zhang}
-    \date{\today}
-    % \maketitle
-
-
+    {\centering
+    \Large\textbf{Monte Carlo Methods Graded Lab 1}\\[0.5em]
+    \normalsize Paulina Ptukha, Xiaopeng Zhang\\[0.3em]
+    \today\\[1em]
+    }
 
     \section{Optimal bounding constant \(M\)}
     \input{sections/section1.tex}
-
+    \section{Comparing the two accept-reject samplers}
+    \input{sections/section2.tex}
+    \section{Monte Carlo estimation}
+    \input{sections/section3.tex}
 
 \end{document}
