--- a/monte-carlo/latex/local-preamble.tex
+++ b/monte-carlo/latex/local-preamble.tex
@@ -1,5 +1,14 @@
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage{geometry}
+\usepackage{subcaption}
+
+\geometry{
+    a3paper,
+    landscape,
+    % margin=0.75in,
+    columnsep=0.5in
+}
 
 \lstset{
     language=R,
